jvm: ratio default